Fix: Gav classen .background z-index: 1 = til -1

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,11 +40,12 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
   background: $secondary;
+
 }
 
 
 .background{
-  z-index: 1;
+  z-index: -1;
   position: absolute;
   inset: 0;
   overflow-x: hidden;
